--- a/package.xml
+++ b/package.xml
@@ -22,7 +22,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://ros.org/wiki/ethercat_soem</url> -->
+  <url type="website">http://ros.org/wiki/ethercat_soem</url>
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
